@@ -66,6 +66,11 @@ fi
 
 
 %changelog
+* Fri Dec 4 2015 Hubert Degaudenzi <Hubert.Degaudenzi@unige.ch> 1.14.1-1
+- Emergency fir for the usage of EUCLID_BASE env variable in ELogin
+- add a generic lx type in the BINARY_TAG. This corresponds
+  to an unkown linux box.
+
 * Fri Nov 27 2015 Hubert Degaudenzi <Hubert.Degaudenzi@unige.ch> 1.14-1
 - update to the cmake library of Elements 3.9
 - fix the cleaning of the ELogin banner
